# AlphaPy

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  README.rst  fix_numpy_shapes.py  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: AGENT_TEMPLATE.md  README.md  code-reviewer.md  devops-engineer.md  fintech-specialist.md  ml-engineer.md  qa-engineer.md  security-reviewer.md  software-architect.md  system-developer.md
.claude/completed/: AGENT_CONSOLIDATION_PLAN.md  FINAL_SECURITY_VALIDATION_REPORT.md  MASTER_PLAN.md  MYPY_TYPE_ERRORS_HANDOVER.md  PERFORMANCE_OPTIMIZATION_ROADMAP.md  PHASE_2_DELEGATION_PLAN.md  PRODUCTION_READINESS_REPORT.md  RETROSPECTIVE_RESULTS.md  SECURITY_QUALITY_GATES.md  SECURITY_VULNERABILITY_ASSESSMENT.md  SECURITY_VULNERABILITY_REPORT.md  SYSTEM_ANALYSIS_REPORT.md  TEST_RESULTS.md  TODO_PHASE1.md  TYPE_SAFETY_PLAN.md  WORKSTREAM_PLAN.md
.claude/completed/migration_scripts/: fix_numpy_tests.py
.claude/wip/: CRITICAL_ANALYSIS.md  MODERNIZATION.md  TEST_COVERAGE_REPORT.md  TODO.md
.github/workflows/: ci.yml  release.yml
.pkg-local-cache/: cache.db  cache.db-shm  cache.db-wal
alphapy/: __main__.py  alias.py  analysis.py  calendrical.py  data.py  estimators.py  features.py  frame.py  globals.py  group.py  market_flow.py  model.py  model.py.bak  optimize.py  plots.py  portfolio.py  space.py  sport_flow.py  system.py  transforms.py  utilities.py  variables.py
docs/: conf.py
outdated/: README.md  setup.py
tests/: README.md  conftest.py  test_backtesting_accuracy.py  test_data_critical.py  test_data_pipeline.py  test_features_core.py  test_features_coverage.py  test_import.py  test_integration_trading.py  test_market_data.py  test_market_data_edge_cases.py  test_ml_security.py  test_model_core.py  test_model_predictions.py  test_portfolio_backtest.py  test_portfolio_finance.py  test_portfolio_money.py  test_portfolio_risk_management.py  test_portfolio_security.py  test_security_transforms.py  test_system_execution.py  test_trading_logic.py  test_trading_strategies.py
